--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div class="container cards d-flex" id="cards">
       <div class="row cards-row justify-content-around">
-        <div class="card col-4" style="width: 18rem">
+        <!-- <div class="card col-4" style="width: 18rem">
           <img
             src="https://randommer.io/images/movies/18.webp"
             class="card-img-top"
@@ -76,47 +76,8 @@
               <i class="bi bi-pencil-fill"></i>
             </button>
           </div>
-        </div>
+        </div> -->
 
-        <div class="card col-4" style="width: 18rem">
-          <img
-            src="https://randommer.io/images/movies/121.webp"
-            class="card-img-top"
-            alt="..."
-          />
-
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Title:</li>
-            <li class="list-group-item">Genre:</li>
-            <li class="list-group-item">Duration:</li>
-            <li class="list-group-item">Director:</li>
-          </ul>
-          <div class="card-body editButton">
-            <button type="button" class="btn btn-outline-primary">
-              <i class="bi bi-pencil-fill"></i>
-            </button>
-          </div>
-        </div>
-
-        <div class="card col-4" style="width: 18rem">
-          <img
-            src="https://randommer.io/images/movies/199.webp"
-            class="card-img-top"
-            alt="..."
-          />
-
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Title:</li>
-            <li class="list-group-item">Genre:</li>
-            <li class="list-group-item">Duration:</li>
-            <li class="list-group-item">Director:</li>
-          </ul>
-          <div class="card-body editButton">
-            <button type="button" class="btn btn-outline-primary">
-              <i class="bi bi-pencil-fill"></i>
-            </button>
-          </div>
-        </div>
 
       </div>
     </div>
